tests/ui/impl-trait/issue-103181-2.stderr
error[E0425]: cannot find value `ident_error` in this scope
  --> $DIR/issue-103181-2.rs:12:5
   |
LL |     ident_error;
   |     ^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
